--- a/AicasTxtApplicationBundle/build.xml
+++ b/AicasTxtApplicationBundle/build.xml
@@ -1,4 +1,4 @@
-<project name="AicasTxtDriverBundle" default="jar" basedir=".">
+<project name="AicasTxtApplicationBundle" default="jar" basedir=".">
 
 	<property name="src" location="src" />
 	<property name="build" location="bin" />
@@ -46,7 +46,7 @@
 		<jar destfile="${plugins.dir}/${ant.project.name}_${version}.jar" basedir="${build}" manifest="META-INF/MANIFEST.MF">
 			<!--  <fileset dir="lib" includes="*.so" /> -->
 			<!-- <zipgroupfileset dir="lib" includes="*.jar"/> -->
-			<zipfileset dir="lib" includes="*.so" prefix="lib"/>
+			<!-- <zipfileset dir="lib" includes="*.so" prefix="lib"/> -->
 		</jar>
 	</target>
 </project>
