--- a/AicasTxtStandardSorting/build.xml
+++ b/AicasTxtStandardSorting/build.xml
@@ -1,4 +1,4 @@
-<project name="AicasTxtParallelSorting" default="jar" basedir=".">
+<project name="AicasTxtStandardSorting" default="jar" basedir=".">
 
 	<property name="src" location="src" />
 	<property name="build" location="bin" />
