AicasTxtSortingLogic initial import and changes to AicasTxtMultipleSorting

--- a/AicasTxtMultipleSorting/build.xml
+++ b/AicasTxtMultipleSorting/build.xml
@@ -7,12 +7,14 @@
 	<property name="plugins.dir" location="../plugins" />
 	<property name="osgi-api" location="../osgi-core/osgi.core-6.0.0.jar" />
 	<property name="version" value="1.0.0" />
-	<property name="dependency-path" value="../AicasTxtDriverBundle/bin" />
+	<property name="dependency-driver" value="../AicasTxtDriverBundle/bin" />
+	<property name="dependency-sorting" value="../AicasTxtSortingLogic/bin" />
 
 	<path id="project.class.path">
 		<pathelement path="${rt.class.path}" />
 		<pathelement path="${osgi-api}"/>
-		<pathelement path="${dependency-path}"/>
+		<pathelement path="${dependency-driver}"/>
+		<pathelement path="${dependency-sorting}"/>
 		<!-- <pathelement path="${my.class.path}" /> -->
 	</path>
 
