updated AicasTxtSortingLogic and AicasTxtMultipleSorting

--- a/AicasTxtSortingLogic/.project
+++ b/AicasTxtSortingLogic/.project
@@ -3,6 +3,7 @@
 	<name>AicasTxtSortingLogic</name>
 	<comment></comment>
 	<projects>
+		<project>framework</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
