AicasTxtSortingAPI initial import

--- a/AicasTxtSortingLogic/build.xml
+++ b/AicasTxtSortingLogic/build.xml
@@ -8,11 +8,13 @@
 	<property name="osgi-api" location="../osgi-core/osgi.core-6.0.0.jar" />
 	<property name="version" value="1.0.0" />
 	<property name="dependency-driver" value="../AicasTxtDriverBundle/bin" />
+	<property name="dependency-sorting-api" value="../AicasTxtSortingAPI/bin" />
 
 	<path id="project.class.path">
 		<pathelement path="${rt.class.path}" />
 		<pathelement path="${osgi-api}"/>
 		<pathelement path="${dependency-driver}"/>
+		<pathelement path="${dependency-sorting-api}"/>
 		<!-- <pathelement path="${my.class.path}" /> -->
 	</path>
 
