--- a/AicasTxtMultipleSorting/build.xml
+++ b/AicasTxtMultipleSorting/build.xml
@@ -1,4 +1,4 @@
-<project name="AicasTxtMultipleSorting" default="jar" basedir=".">
+<project name="AicasRealtimeSorting" default="jar" basedir=".">
 
 	<property name="src" location="src" />
 	<property name="build" location="bin" />
