cleaned-up, non-RT workers again, acceptor thread is still periodic, needs a test

--- a/AicasTxtParallelSorting/build.xml
+++ b/AicasTxtParallelSorting/build.xml
@@ -1,4 +1,4 @@
-<project name="AicasRealtimeSorting" default="jar" basedir=".">
+<project name="AicasParallelSorting" default="jar" basedir=".">
 
 	<property name="src" location="src" />
 	<property name="build" location="bin" />
