--- a/AicasTxtParallelSorting/.project
+++ b/AicasTxtParallelSorting/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AicasRealtimeSorting</name>
+	<name>AicasParallelSorting</name>
 	<comment></comment>
 	<projects>
 	</projects>
