--- a/AicasTxtParallelSorting/build.xml
+++ b/AicasTxtParallelSorting/build.xml
@@ -9,6 +9,7 @@
 	<property name="version" value="1.0.0" />
 	<property name="dependency-driver" value="../AicasTxtDriverBundle/bin" />
     <property name="dependency-sorting-api" value="../AicasTxtSortingAPI/bin" />
+	<property name="dependency-connector-api" value="../StatusConnectorAPI/bin" />
 	<property name="smack-api" value="../SmackContainerBundle" />
 
 	<path id="project.class.path">
@@ -16,6 +17,7 @@
 		<pathelement path="${osgi-api}"/>
 		<pathelement path="${dependency-driver}"/>
 		<pathelement path="${dependency-sorting-api}"/>
+		<pathelement path="${dependency-connector-api}"/>
        <fileset dir="${smack-api}">
             <include name="**/*.jar" />
         </fileset>
